--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <title>Meu Portifólio</title>
 </head>
 <body>
-    <header>
-        <div class="cima">
-            <img src="./img/vitin.png" alt="vitin">
-            <h4>Vitor é Viado?</h4>
-        </div>
-    </header>
-    <div class="container">
-        <button class="button">É ou Num é?</button>
-      </div>      
+    <div class="perfil">
+        <img src="img/vitin.png" alt="Foto Tio patinhas">
+        <p class="tittle">Olá, meu nome é Vitin</p>
+        <h1>Eu sou estudante de Programação</h1>
+        <p class="tittle2">Sou estudante da escola Duque de Caxias. Gosto de estudar Programação. Gostode aprender sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
+    </div>
+    <div class="meio">
+        <h4>Minhas Abilidades</h4>
+        <button>HTML</button>
+        <button>CSS</button>
+        <button>JavaScript</button>
+        <button>C#</button>
+    </div> 
 </body>
 </html>
